--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -18,8 +18,8 @@
             <h2 class="dce-text-light dce-bg-dark underlined underlined-light">Présentation</h2>
         </div>
         <div class="row">
-            <div class="section-content">
-                <div class="section-text dce-text-light col-12 col-md-5">
+            <div class="section-content col-12">
+                <div class="section-text dce-text-light col-12 col-md-6">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris urna odio, convallis sit amet
                         ullamcorper placerat, bibendum congue mauris. Nunc sed libero purus. Vestibulum ante ipsum
