--- a/assets/css/app_back.sass
+++ b/assets/css/app_back.sass
@@ -1,2 +1,4 @@
 @import "_style.scss"
 @import "_admin.scss"
+@import "~trumbowyg/dist/ui/trumbowyg.min.css"
+@import "~trumbowyg/dist/plugins/colors/ui/trumbowyg.colors.min.css"
