--- a/templates/back/post.html.twig
+++ b/templates/back/post.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Édition d'un article{% endblock %}
 {% block adminContent %}
     <h2 class="dce-text-dark dce-bg-light text-center underlined">Édition d'un article</h2>
-    {{ form_start(form, {'attr': {'id' : 'admin-gallery-form', 'class': 'offset-md-2 col-md-8'}}) }}
+    {{ form_start(form, {'attr': {'id' : 'admin-form', 'class': 'offset-md-1 col-md-10 offset-lg-2 col-lg-8'}}) }}
     {{ form_row(form.title) }}
     {{ form_row(form.image) }}
     {{ form_row(form.published) }}
