--- a/templates/front/posts.html.twig
+++ b/templates/front/posts.html.twig
@@ -8,7 +8,7 @@
         <h2 class="dce-text-dark dce-bg-light underlined">Actualités</h2>
     </div>
     {% if posts is not empty %}
-        <div id="list-posts" class="list-articles offset-2 col-md-8">
+        <div id="list-posts" class="list-articles offset-md-2 col-md-8 col-12">
             {% for post in posts %}
                 <article class="dce-bg-dark dce-text-light d-flex">
                     <div class="article-tumbnail col-md-6">
