--- a/templates/front/service.html.twig
+++ b/templates/front/service.html.twig
@@ -13,7 +13,7 @@
                 </div>
             </div>
         </div>
-        <div class="single-article dce-bg-dark dce-text-light offset-1 col-md-10">
+        <div class="single-article dce-bg-dark dce-text-light offset-md-1 col-md-10 col-12">
             <article>
                 <div class="article-image">
                     {% if service.image is not null %}
