--- a/assets/css/_style.scss
+++ b/assets/css/_style.scss
@@ -9,7 +9,7 @@
 html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
   margin: 0;
   padding: 0;
-  border: 0;
+  border: none;
   font-size: 100%;
   font-weight: normal;
   vertical-align: baseline;
@@ -122,13 +122,13 @@ a:hover, i:hover {
 /* Menu */
 
 #header {
-  height: 230px;
+  height: 150px;
 }
 
 #main-menu {
   justify-content: space-around;
   align-items: center;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 #main-menu > li {
@@ -164,16 +164,42 @@ a:hover, i:hover {
 }
 
 #logo-container {
-  //background: url(../images/dce.png) no-repeat center;
-  width: 200px;
-  height: 200px;
-  background-size: cover;
+  width: 150px;
+  height: 150px;
 }
 
 #logo {
   width: 100%;
 }
 
+/* Menu hamburger mobile */
+#hamburger-menu {
+  display: flex;
+  height: 150px;
+  align-items: center;
+}
+
+#hamburger-menu i {
+  color: #eaeaea;
+}
+
+.dropdown-toggle::after {
+  color: #eaeaea;
+}
+
+.navbar #logo-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.navbar img {
+  width: 150px !important
+}
+
+.menu-mobile {
+  width: 100% !important;
+}
 /* Carousel */
 
 .carousel {
@@ -206,7 +232,7 @@ a:hover, i:hover {
   width: 75%;
 }
 
- h2 {
+h2 {
   font-size: 40px;
   padding: 0 20px;
   margin-bottom: 10px;
@@ -260,11 +286,6 @@ section {
 
 .section-text p {
   text-align: right;
-}
-
-.section-img {
-  background: url(../images/presentation.jpg) no-repeat right top;
-  background-size: cover;
 }
 
 .section-img img {
@@ -345,7 +366,6 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 25px;
 
   text-align: center;
   background-repeat: no-repeat;
@@ -380,6 +400,10 @@ section {
 .prestation span {
   font-size: 2em;
   letter-spacing: 3px;
+}
+
+.prestation p:first-child {
+  padding: 20px;
 }
 
 /* Pied de page */
@@ -585,7 +609,7 @@ footer .row {
 }
 
 .equipe .grid figcaption h5 {
-  font-size: 1.8em;
+  font-size: 1.3em;
   font-style: italic;
 }
 
