--- a/templates/front/galleries.html.twig
+++ b/templates/front/galleries.html.twig
@@ -8,11 +8,11 @@
             <h2 class="dce-text-dark dce-bg-light underlined">Galeries</h2>
         </div>
         {% if galleries is not null %}
-            <div id="list-galleries" class="list-articles offset-2 col-md-8">
+            <div id="list-galleries" class="list-articles offset-md-2 col-md-8 col-12">
                 {% for gallery in galleries %}
                     {% if gallery.extract is not empty %}
                         <article class="dce-bg-dark dce-text-light d-flex">
-                            <div class="article-tumbnail col-md-4">
+                            <div class="article-tumbnail col-md-4 d-none d-md-block">
                                 {% if gallery.event.image is not null %}
                                     <img src="{{ gallery.event.image.url }}" alt="{{ gallery.event.image.alt }}"
                                          class="img-fluid img-responsive"/>
