--- a/templates/front/gallery.html.twig
+++ b/templates/front/gallery.html.twig
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        <div class="single-article col-md-12">
+        <div class="single-article col-12">
             <article class=" flex-column">
                 <div class="article-image col-md-4">
                     <img src="{{ gallery.event.image.url }}" alt="{{ gallery.event.image.alt }}" class="img-fluid"/>
@@ -28,7 +28,7 @@
                         <i class="fas fa-chevron-left"></i>
                     </div>
 
-                    <ul class="grid col-md-10 clearfix galerie" id="galerie">
+                    <ul class="grid col-md-10 col-10 clearfix galerie" id="galerie">
                         {% for picture in pictures %}
                             <li class="col-md-2"><a href="{{ picture.url }}" data-lightbox="roadtrip">
                                     <img src="{{ picture.url }}" alt="{{ picture.alt }}" class="img-fluid galerie-img">
