--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -4,66 +4,89 @@
 
 {% block pageContent %}
     <div class="carousel">
-       {# <iframe
-                src="https://www.youtube.com/embed/26-1t15R_MU?rel=0&controls=0&showinfo=0&mute=1&autoplay=1"
-                allow="autoplay; encrypted-media" allowfullscreen>
+        {# <iframe
+                 src="https://www.youtube.com/embed/26-1t15R_MU?rel=0&controls=0&showinfo=0&mute=1&autoplay=1"
+                 allow="autoplay; encrypted-media" allowfullscreen>
 
 
-        </iframe>
-        #}
+         </iframe>
+         #}
     </div>
 
     <section class="dce-bg-dark">
         <div class="section-header">
-            <h2 class="dce-text-light dce-bg-dark underlined underlined-light">Présentation</h2>
+            <h2 class="dce-text-light dce-bg-dark underlined underlined-light">
+                {% if post is not null %}
+                    {{ post.title }}
+                {% else %}
+                    Présentation
+                {% endif %}
+            </h2>
         </div>
         <div class="row">
-            <div class="section-content col-12">
+            <div class="section-content col-12 featured-post">
                 <div class="section-text dce-text-light col-12 col-md-6">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris urna odio, convallis sit amet
-                        ullamcorper placerat, bibendum congue mauris. Nunc sed libero purus. Vestibulum ante ipsum
-                        primis in
-                        faucibus orci luctus et ultrices posuere cubilia Curae; Morbi purus tortor, fringilla nec ipsum
-                        vel,
-                        aliquet ornare orci. Proin dapibus ultricies dictum. Praesent vitae laoreet velit. In eu risus
-                        augue.
-                        Mauris elementum nisl ut lacus ultricies vestibulum. Cras lobortis felis vel neque ultrices
-                        porta.
-                        Sed
-                        vehicula tincidunt orci. Donec facilisis metus eu tellus aliquam, vitae tempor dui ultricies.
-                        <br>
-                        Aenean pulvinar ultricies nibh non imperdiet. Curabitur at sollicitudin urna. Donec eget elit
-                        eros.
-                        Donec facilisis dui tincidunt, rhoncus turpis in, eleifend tortor. In tempus tempus purus, vel
-                        aliquet
-                        neque condimentum non. Donec lacus dolor, convallis varius tellus at, placerat tincidunt metus.
-                        Aliquam
-                        bibendum ornare consequat. Cras a varius turpis.
-                        Aenean tristique pellentesque leo ut aliquet. Etiam hendrerit sagittis egestas. Aenean cursus
-                        non
-                        magna in accumsan. In metus nibh, tempor sed massa eget, sodales volutpat augue. Sed condimentum
-                        mauris quis sodales pellentesque. Quisque ac orci erat. Mauris placerat, arcu a imperdiet
-                        elementum,
-                        nibh justo venenatis magna, id tincidunt massa turpis in neque.
-                        <br>
-                        Proin quis sapien sit amet augue dictum luctus a sed tortor. Morbi malesuada rhoncus nisi
-                        pharetra
-                        consequat. Curabitur id odio non tellus scelerisque molestie. Curabitur ac ullamcorper velit.
-                        Sed
-                        fermentum tristique turpis maximus luctus. Morbi eget mauris ligula. Ut ornare nisi a blandit
-                        aliquet. Donec malesuada, eros eu interdum sollicitudin, sapien felis placerat justo, id
-                        consectetur
-                        odio libero ut massa. Integer quis ligula ac purus malesuada blandit. Donec semper suscipit nisl
-                        quis tempus. Suspendisse vel ex in lorem convallis consequat. Etiam non vestibulum quam.
-                        Maecenas
-                        eget elit quam. Quisque convallis ullamcorper eros, et consequat erat pellentesque ultricies.
-                        Nam
-                        laoreet magna ipsum, ut molestie massa pretium ac.
-                    </p>
+                    {% if post is not null %}
+                        {{ post.content|raw }}
+                    {% else %}
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris urna odio, convallis sit
+                            amet
+                            ullamcorper placerat, bibendum congue mauris. Nunc sed libero purus. Vestibulum ante ipsum
+                            primis in
+                            faucibus orci luctus et ultrices posuere cubilia Curae; Morbi purus tortor, fringilla nec
+                            ipsum
+                            vel,
+                            aliquet ornare orci. Proin dapibus ultricies dictum. Praesent vitae laoreet velit. In eu
+                            risus
+                            augue.
+                            Mauris elementum nisl ut lacus ultricies vestibulum. Cras lobortis felis vel neque ultrices
+                            porta.
+                            Sed
+                            vehicula tincidunt orci. Donec facilisis metus eu tellus aliquam, vitae tempor dui
+                            ultricies.
+                            <br>
+                            Aenean pulvinar ultricies nibh non imperdiet. Curabitur at sollicitudin urna. Donec eget
+                            elit
+                            eros.
+                            Donec facilisis dui tincidunt, rhoncus turpis in, eleifend tortor. In tempus tempus purus,
+                            vel
+                            aliquet
+                            neque condimentum non. Donec lacus dolor, convallis varius tellus at, placerat tincidunt
+                            metus.
+                            Aliquam
+                            bibendum ornare consequat. Cras a varius turpis.
+                            Aenean tristique pellentesque leo ut aliquet. Etiam hendrerit sagittis egestas. Aenean
+                            cursus
+                            non
+                            magna in accumsan. In metus nibh, tempor sed massa eget, sodales volutpat augue. Sed
+                            condimentum
+                            mauris quis sodales pellentesque. Quisque ac orci erat. Mauris placerat, arcu a imperdiet
+                            elementum,
+                            nibh justo venenatis magna, id tincidunt massa turpis in neque.
+                            <br>
+                            Proin quis sapien sit amet augue dictum luctus a sed tortor. Morbi malesuada rhoncus nisi
+                            pharetra
+                            consequat. Curabitur id odio non tellus scelerisque molestie. Curabitur ac ullamcorper
+                            velit.
+                            Sed
+                            fermentum tristique turpis maximus luctus. Morbi eget mauris ligula. Ut ornare nisi a
+                            blandit
+                            aliquet. Donec malesuada, eros eu interdum sollicitudin, sapien felis placerat justo, id
+                            consectetur
+                            odio libero ut massa. Integer quis ligula ac purus malesuada blandit. Donec semper suscipit
+                            nisl
+                            quis tempus. Suspendisse vel ex in lorem convallis consequat. Etiam non vestibulum quam.
+                            Maecenas
+                            eget elit quam. Quisque convallis ullamcorper eros, et consequat erat pellentesque
+                            ultricies.
+                            Nam
+                            laoreet magna ipsum, ut molestie massa pretium ac.
+                        </p>
+                    {% endif %}
                 </div>
-                <div class="section-img col-12 col-md-6">
-                    <img src="#" alt="placeholder">
+                <div class="section-img col-12 col-md-6 " data-bg="{{ post.image.url }}">
+                    <img src="{{ post.image.url }}" alt="{{ post.image.alt }}">
                 </div>
             </div>
         </div>
@@ -89,64 +112,86 @@
             <h2 class="dce-text-light dce-bg-dark underlined underlined-light">Prestations</h2>
         </div>
         <div class="row">
-            <div class="section-content col-md-10">
-                <div class="prestation dce-text-light col-12 col-md-3" id="service-workshops">
-                    <div class="prestation-text text-center">
-                        <a href="#">
-                            <span class="dce-text-light">Workshops</span>
-                        </a>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris urna odio, convallis sit
-                            amet
-                            ullamcorper placerat, bibendum congue mauris. Nunc sed libero purus. Vestibulum ante ipsum
-                            primis in
-                            faucibus orci luctus et ultrices posuere cubilia Curae; Morbi purus tortor, fringilla nec
-                            ipsum
-                            vel,
-                            aliquet ornare orci. Proin dapibus ultricies dictum. Praesent vitae laoreet velit. In eu
-                            risus
-                            augue.
-                        </p>
+            <div class="section-content col-md-12 col-lg-10">
+                {% if services is not null %}
+                    {% for service in services %}
+                        <div class="prestation dce-text-light col-12 col-md" data-bg="{{ service.image.url }}">
+                            <div class="prestation-text text-center">
+                                <a href="{{ path('front_service', {'slug': service.slug}) }}">
+                                    <span class="dce-text-light">{{ service.title }}</span>
+                                </a>
+                                <p>
+                                    {{ service.content| raw }}
+                                </p>
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    <div class="prestation dce-text-light col-12 col-md-4" id="service-workshops">
+                        <div class="prestation-text text-center">
+                            <a href="#">
+                                <span class="dce-text-light">Workshops</span>
+                            </a>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris urna odio, convallis sit
+                                amet
+                                ullamcorper placerat, bibendum congue mauris. Nunc sed libero purus. Vestibulum ante
+                                ipsum
+                                primis in
+                                faucibus orci luctus et ultrices posuere cubilia Curae; Morbi purus tortor, fringilla
+                                nec
+                                ipsum
+                                vel,
+                                aliquet ornare orci. Proin dapibus ultricies dictum. Praesent vitae laoreet velit. In eu
+                                risus
+                                augue.
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="prestation dce-text-light col-12 col-md-3" id="service-shows">
-                    <div class="prestation-text text-center">
-                        <a href="#">
-                            <span class="dce-text-light">Shows</span>
-                        </a>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris urna odio, convallis sit
-                            amet
-                            ullamcorper placerat, bibendum congue mauris. Nunc sed libero purus. Vestibulum ante ipsum
-                            primis in
-                            faucibus orci luctus et ultrices posuere cubilia Curae; Morbi purus tortor, fringilla nec
-                            ipsum
-                            vel,
-                            aliquet ornare orci. Proin dapibus ultricies dictum. Praesent vitae laoreet velit. In eu
-                            risus
-                            augue.
-                        </p>
+                    <div class="prestation dce-text-light col-12 col-md-3" id="service-shows">
+                        <div class="prestation-text text-center">
+                            <a href="#">
+                                <span class="dce-text-light">Shows</span>
+                            </a>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris urna odio, convallis sit
+                                amet
+                                ullamcorper placerat, bibendum congue mauris. Nunc sed libero purus. Vestibulum ante
+                                ipsum
+                                primis in
+                                faucibus orci luctus et ultrices posuere cubilia Curae; Morbi purus tortor, fringilla
+                                nec
+                                ipsum
+                                vel,
+                                aliquet ornare orci. Proin dapibus ultricies dictum. Praesent vitae laoreet velit. In eu
+                                risus
+                                augue.
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="prestation dce-text-light col-12 col-md-3" id="service-cours">
-                    <div class="prestation-text text-center">
-                        <a href="#">
-                            <span class="dce-text-light">Cours particuliers</span>
-                        </a>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris urna odio, convallis sit
-                            amet
-                            ullamcorper placerat, bibendum congue mauris. Nunc sed libero purus. Vestibulum ante ipsum
-                            primis in
-                            faucibus orci luctus et ultrices posuere cubilia Curae; Morbi purus tortor, fringilla nec
-                            ipsum
-                            vel,
-                            aliquet ornare orci. Proin dapibus ultricies dictum. Praesent vitae laoreet velit. In eu
-                            risus
-                            augue.
-                        </p>
+                    <div class="prestation dce-text-light col-12 col-md-3" id="service-cours">
+                        <div class="prestation-text text-center">
+                            <a href="#">
+                                <span class="dce-text-light">Cours particuliers</span>
+                            </a>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris urna odio, convallis sit
+                                amet
+                                ullamcorper placerat, bibendum congue mauris. Nunc sed libero purus. Vestibulum ante
+                                ipsum
+                                primis in
+                                faucibus orci luctus et ultrices posuere cubilia Curae; Morbi purus tortor, fringilla
+                                nec
+                                ipsum
+                                vel,
+                                aliquet ornare orci. Proin dapibus ultricies dictum. Praesent vitae laoreet velit. In eu
+                                risus
+                                augue.
+                            </p>
+                        </div>
                     </div>
-                </div>
+                {% endif %}
+
             </div>
         </div>
     </section>
@@ -159,7 +204,6 @@
                 <div class="section-img col-12 col-md-6">
                     <img src="#" alt="placeholder">
                 </div>
-
                 <div class="section-text col-12 col-md-5 dce-text-dark">
                     <p class="text-left">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris urna odio, convallis sit amet
@@ -174,7 +218,6 @@
                         Sed
                         vehicula tincidunt orci. Donec facilisis metus eu tellus aliquam, vitae tempor dui ultricies.
                     </p>
-
                 </div>
             </div>
         </div>
