--- a/templates/menu-desktop.html.twig
+++ b/templates/menu-desktop.html.twig
@@ -1,7 +1,7 @@
 <menu class="d-md-flex d-none" id="main-menu">
-    <li class="d-flex flex-column" id="logo-container">
+    <li class="d-flex flex-column logo-container">
         <a href="{{ path('front_home') }}">
-            <img src="{{ absolute_url(asset('build/images/dce.9342630e.png')) }}" alt="logo dce" id="logo">
+            <img src="{{ absolute_url(asset('build/images/dce.9342630e.png')) }}" alt="logo dce" class="logo">
         </a>
     </li>
     <li class="d-flex flex-column">
