--- a/assets/css/_style.scss
+++ b/assets/css/_style.scss
@@ -92,6 +92,7 @@ a:hover, i:hover {
   -moz-box-shadow: inset 0px -1px 5px 0px rgba(0, 0, 0, 0.75);
   box-shadow: inset 0px -1px 5px 0px rgba(0, 0, 0, 0.75);
   border-radius: unset !important;
+  border: 1px #282828 solid;
 }
 
 #page-content {
@@ -163,12 +164,12 @@ a:hover, i:hover {
   color: #282828;
 }
 
-#logo-container {
+.logo-container {
   width: 150px;
   height: 150px;
 }
 
-#logo {
+.logo {
   width: 100%;
 }
 
@@ -187,7 +188,7 @@ a:hover, i:hover {
   color: #eaeaea;
 }
 
-.navbar #logo-container {
+.navbar .logo-container {
   display: flex;
   width: 100%;
   justify-content: center;
@@ -200,6 +201,7 @@ a:hover, i:hover {
 .menu-mobile {
   width: 100% !important;
 }
+
 /* Carousel */
 
 .carousel {
@@ -366,11 +368,28 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 
   text-align: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.prestation-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 95%;
+  height: 450px;
+}
+
+.prestation .background-image {
+  position: absolute;
+  z-index: 1;
+  width: 90%;
+  height: 90%;
+  filter: blur(1px);
 }
 
 #service-workshops {
@@ -389,7 +408,18 @@ section {
   display: inherit;
   flex-direction: inherit;
   align-items: inherit;
+  justify-content: center;
   margin-bottom: 20px;
+  z-index: 2;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+0,ffffff+0,ffffff+50,ffffff+100&0+0,1+50,0+100 */
+  background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,.2) 50%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,.2) 50%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,.2) 50%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
+
+
+  padding: 20px;
+  width: 100%;
 }
 
 .prestation i {
@@ -400,6 +430,8 @@ section {
 .prestation span {
   font-size: 2em;
   letter-spacing: 3px;
+  text-align: center;
+
 }
 
 .prestation p:first-child {
@@ -421,6 +453,7 @@ footer .row {
 .footer-widget {
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
 }
 
 .footer-widget ul {
@@ -432,6 +465,10 @@ footer .row {
 
 .footer-widget .flex-row {
   margin: 0 !important;
+}
+
+.footer-widget li {
+  margin-bottom: 10px;
 }
 
 .footer-widget i {
