--- a/templates/back/event.html.twig
+++ b/templates/back/event.html.twig
@@ -3,16 +3,14 @@
 {% block title %}Édition d'un workshop{% endblock %}
 {% block adminContent %}
     <h2 class="dce-text-dark dce-bg-light text-center underlined">Édition d'un workshop</h2>
-    {{ form_start(form, {'attr': {'id' : 'admin-form', 'class': 'offset-md-2 col-md-8'}}) }}
+    {{ form_start(form, {'attr': {'class': 'offset-md-2 col-md-8 admin-form'}}) }}
     {{ form_row(form.title) }}
     {{ form_row(form.image) }}
     {{ form_row(form.added) }}
-    {{ form_label(form.place) }}
-    {{ form_widget(form.place) }}
-    {{ form_label(form.formulas) }}
-    {{ form_widget(form.formulas) }}
+    {{ form_row(form.place) }}
+    {{ form_row(form.formulas) }}
     {{ form_row(form.published) }}
     {{ form_row(form.content) }}
-    {{ form_row(form.save) }}
+    {{ form_row(form.save, {'attr': {'class': 'col-6 mx-auto dce-btn dce-btn-red' }}) }}
     {{ form_end(form) }}
 {% endblock %}
