--- a/templates/back/team.html.twig
+++ b/templates/back/team.html.twig
@@ -3,14 +3,17 @@
 {% block title %}Team DCE{% endblock %}
 {% block adminContent %}
     <h2 class="dce-text-dark dce-bg-light text-center underlined">Modification de la team</h2>
-    {{ form_start(form, {'attr': {'id' : 'admin-form', 'class': 'offset-md-2 col-md-8'}}) }}
+    {{ form_start(form, {'attr': {'class': 'offset-md-2 col-md-8 admin-form'}}) }}
     {% for teammate in form.teammates %}
+        <img src="{{ teammate.vars.value.image.url }}" alt="{{ teammate.vars.value.image.alt }}"
+             class="img img-fluid col-12 col-md-3 ml-md-2">
         {{ form_row(teammate.name) }}
         {{ form_row(teammate.description) }}
-        <img src="{{ teammate.vars.value.image.url }}" alt="{{ teammate.vars.value.image.alt }}">
         {{ form_row(teammate.image) }}
     {% endfor %}
-    {{ form_widget(form.teammates) }}
-    {{ form_row(form.save) }}
+    <fieldset class="form-group">
+        <div id="team_teammates" data-prototype="{{ form_widget(form.teammates.vars.prototype)|e('html_attr') }}"></div>
+    </fieldset>
+    {{ form_row(form.save, {'attr': {'class': 'col-6 mx-auto dce-btn dce-btn-red' }}) }}
     {{ form_end(form) }}
 {% endblock %}
