--- a/templates/front/posts.html.twig
+++ b/templates/front/posts.html.twig
@@ -20,7 +20,7 @@
                         <h3>{{ post.title }}</h3>
                         <p class="article-date">Publié le: {{ post.added|localizeddate('medium', 'none') }}</p>
                         <p class="article-text">
-                            {{ post.content|truncate(450, true) }}
+                            {{ post.content|striptags|striptags|slice(0, 200) ~ '...' }}
                         </p>
                         <div class="d-flex mx-auto">
                             <a href="{{ path('front_post', {"slug": post.slug}) }}" class="dce-btn dce-btn-red">Tout
