--- a/templates/template.html.twig
+++ b/templates/template.html.twig
@@ -42,31 +42,7 @@
     {% endblock %}
     {% block pageContent %} {% endblock %}
     <footer class="dce-bg-dark">
-        <div class="row dce-text-light">
-            <div class="col-md-3 footer-widget">
-                <ul>
-                    <li>Site réalisé par Jordan Brito</li>
-                    <li>© www.danceconceptevent.com</li>
-                    <li><a href="{{ path('back_home') }}" class="dce-text-light">Administration</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4 text-center footer-widget">
-                <ul class="flex-row">
-                    <li><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#" class="youtube"><i class="fab fa-youtube"></i></a></li>
-                    <li><a href="#" class="snapchat"><i class="fab fa-snapchat"></i></a></li>
-                </ul>
-            </div>
-            <div class="col-md-3 text-left footer-widget">
-                <ul>
-                    <li><a href="#" class="dce-text-light">Mentions légales</a></li>
-                    <li><a href="#" class="dce-text-light">Conditions Générales d'utilisation</a></li>
-                    <li><a href="#" class="dce-text-light">RGPD</a></li>
-                </ul>
-            </div>
-        </div>
+        {% include 'footer.html.twig' %}
     </footer>
 </div>
 <script src="{{ asset('build/js/app.js') }}"></script>
