--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -17,7 +17,7 @@
         <div class="section-header">
             <h2 class="dce-text-light dce-bg-dark underlined underlined-light">
                 {% if post is not null %}
-                    {{ post.title }}
+                <a href="{{ path('front_post', {'slug': post.slug}) }}">{{ post.title }}</a>
                 {% else %}
                     Présentation
                 {% endif %}
