--- a/templates/back/team.html.twig
+++ b/templates/back/team.html.twig
@@ -5,11 +5,13 @@
     <h2 class="dce-text-dark dce-bg-light text-center underlined">Modification de la team</h2>
     {{ form_start(form, {'attr': {'class': 'offset-md-2 col-md-8 admin-form'}}) }}
     {% for teammate in form.teammates %}
-        <img src="{{ teammate.vars.value.image.url }}" alt="{{ teammate.vars.value.image.alt }}"
-             class="img img-fluid col-12 col-md-3 ml-md-2">
-        {{ form_row(teammate.name) }}
-        {{ form_row(teammate.description) }}
-        {{ form_row(teammate.image) }}
+        <div class="team-member form-group">
+            <img src="{{ teammate.vars.value.image.url }}" alt="{{ teammate.vars.value.image.alt }}"
+                 class="img img-fluid col-12 col-md-3 ml-md-2">
+            {{ form_row(teammate.name) }}
+            {{ form_row(teammate.description) }}
+            {{ form_row(teammate.image) }}
+        </div>
     {% endfor %}
     <fieldset class="form-group">
         <div id="team_teammates" data-prototype="{{ form_widget(form.teammates.vars.prototype)|e('html_attr') }}"></div>
