--- a/templates/front/posts.html.twig
+++ b/templates/front/posts.html.twig
@@ -19,8 +19,8 @@
                     <div class="article-content d-flex flex-column col-md-6">
                         <h3>{{ post.title }}</h3>
                         <p class="article-date">Publié le: {{ post.added|localizeddate('medium', 'none') }}</p>
-                        <p class="article-text">
-                            {{ post.content|striptags|striptags|slice(0, 200) ~ '...' }}
+                        <p class="article-text d-none d-md-block">
+                        {{ post.content|striptags|striptags|slice(0, 200) ~ '...' }}
                         </p>
                         <div class="d-flex mx-auto">
                             <a href="{{ path('front_post', {"slug": post.slug}) }}" class="dce-btn dce-btn-red">Tout
